oauth.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: default
spec:
  selector:
    app: oauth2-proxy
  ports:
    - port: 8086
      targetPort: 8086

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
        - name: oauth2-proxy
          image: bitnami/oauth2-proxy:latest
          args:
            - --provider=oidc                                   # Ustaw jako OIDC
            - --oidc-issuer=https://your-auth-service-url     # URL do swojego serwisu autoryzacyjnego
            - --client-id=YOUR_CLIENT_ID                        # ID klienta
            - --client-secret=YOUR_CLIENT_SECRET                # Sekret klienta
            - --cookie-secret=YOUR_COOKIE_SECRET                # Sekret do szyfrowania ciasteczek
            - --upstream=http://your-upstream-service:8080     # URL do Twojej chronionej aplikacji
            - --http-address=0.0.0.0:8080                      # Adres, na którym oauth2-proxy będzie nasłuchiwał
            - --redirect-url=http://your-domain.com/oauth2/callback  # URL przekierowania
            - --set-authorization-header
          ports:
            - containerPort: 8086
