api-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-bypass-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/use-regex: "true"
#    nginx.ingress.kubernetes.io/auth-response-headers: "Authorization, Content-Type"
#    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
#    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
#    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type"
#    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"  # Allow credentials if needed
#    nginx.ingress.kubernetes.io/cors-max-age: "86400"
#    nginx.ingress.kubernetes.io/enable-cors: "true"
  # No authentication annotations for login and register
spec:
  rules:
    - host: "flashlearn.127.0.0.1.nip.io"
      http:
        paths:
          - path: /auth/login
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8084
          - path: /auth/register
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8084
          - path: /auth/userData
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8084
          - path: /auth/user
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8084


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth-service.flashlearn.svc.cluster.local:8084/auth/check"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/auth-response-headers: "Authorization, Content-Type"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:5174"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,X-LANG,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,X-Api-Key,X-Device-Id,Access-Control-Allow-Origin"
#    nginx.ingress.kubernetes.io/enable-cors: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: "flashlearn.127.0.0.1.nip.io"
      http:
        paths:
          - path: /flashcards(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: flashcard-service
                port:
                  number: 8080
          - path: /quiz(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: quiz-service
                port:
                  number: 8081
          - path: /pexel(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pexel-service
                port:
                  number: 8082
          - path: /deepl(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: deepl-service
                port:
                  number: 8083
          - path: /generate(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: generating-service
                port:
                  number: 8000
#          - path: /auth(/|$)(.*)
#            pathType: ImplementationSpecific
#            backend:
#              service:
#                name: auth-service
#                port:
#                  number: 8084
